================================================================================
Camera module of Fast Visualization Kit (FVK) INSTALL v1.1.2
================================================================================

New features and changes in version 1.1.2:            (Release Date: 2017.08.12)
--------------------------------------------------------------------------------

1. some fixes and changes in camera and video writer classes.


New features and changes in version 1.1.1:            (Release Date: 2017.07.29)
--------------------------------------------------------------------------------

1. Fixes in camera classes.


New features and changes in version 1.1.0:            (Release Date: 2017.07.27)
--------------------------------------------------------------------------------

1. First release with fully working examples.